# cloak

./: .gitignore  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cabal.project  certe.cabal  cloak.cabal  hie.yaml
.github/workflows/: lint.yml  tests.yml
app/: Main.hs
benchmark/: Main.hs
src/: Certe.hs  Cloak.hs  Prelude.hs
src/Cloak/: Core.hs  Error.hs
src/Cloak/Compile/: Core.hs  Expression.hs
src/Cloak/Compile/Expression/: Literal.hs
src/Cloak/Parse/: Core.hs  Expression.hs
src/Cloak/Parse/Expression/: Literal.hs
src/Cloak/Syntax/: Expression.hs
src/Cloak/Syntax/Expression/: Literal.hs
src/Language/Cloak/: Compile.hs  Core.hs  Parse.hs  Syntax.hs
src/Language/Cloak/Compile/: Comment.hs
src/Language/Cloak/Compile/Literal/: Character.hs  Number.hs  String.hs
src/Language/Cloak/Parse/: Comment.hs  Core.hs
src/Language/Cloak/Parse/Literal/: Character.hs  Number.hs  String.hs
src/Language/Cloak/Syntax/: Comment.hs
src/Language/Cloak/Syntax/Literal/: Character.hs  Number.hs  String.hs
test/: CloakSpec.hs  Spec.hs
test/Cloak/: Test.hs
test/Cloak/Compile/Expression/: LiteralSpec.hs
test/Cloak/Parse/Expression/: LiteralSpec.hs
test/Language/Cloak/: ParseSpec.hs
test/Language/Cloak/Compile/: TestUtils.hs
test/Language/Cloak/Compile/Literal/: CharacterSpec.hs  NumberSpec.hs  StringSpec.hs
test/Language/Cloak/Parse/: CommentSpec.hs
test/Language/Cloak/Parse/Literal/: CharacterSpec.hs  NumberSpec.hs  StringSpec.hs
