cabal-version:       2.0
name:                certe
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             Apache-2.0
license-file:        LICENSE
author:              Nikita Tchayka
maintainer:          nikitatchayka@gmail.com
copyright:           2020 Nikita Tchayka
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:     Certe
                       Prelude

  build-depends:       base-noprelude >= 4.12.0.0 && < 4.14
                     , relude

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable certe
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude >= 4.12.0.0 && < 4.14
                     , certe
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite certe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base-noprelude >= 4.12.0.0 && < 4.14
                     , certe
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

benchmark certe-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       base-noprelude >= 4.12.0.0 && < 4.14
                     , gauge
                     , certe
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
