cabal-version:       3.0
name:                cloak
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             Apache-2.0
license-file:        LICENSE
author:              Nikita Tchayka
maintainer:          nikitatchayka@gmail.com
copyright:           2020 Nikita Tchayka
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

common common-options
  build-depends:       base-noprelude >= 4.12.0.0 && < 4.14
                     , rio

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  default-language:    Haskell2010
  default-extensions:  AutoDeriveTypeable
                       BangPatterns
                       BinaryLiterals
                       ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveDataTypeable
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       DoAndIfThenElse
                       EmptyDataDecls
                       ExistentialQuantification
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       MonadFailDesugaring
                       MultiParamTypeClasses
                       MultiWayIf
                       NamedFieldPuns
                       OverloadedStrings
                       PartialTypeSignatures
                       PatternGuards
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Cloak
                       Prelude

executable cloak
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       cloak

test-suite cloak-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       cloak
                     , hspec
                     , hspec-discover
  build-tool-depends: hspec-discover:hspec-discover == 2.*

benchmark cloak-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       cloak
                     , gauge